--- a/test/index.html
+++ b/test/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8">
         <title>Bugger.js testing page</title>
+        <!--Ideally we would use the minified version, but for the purpose of demonstrating we are using the source code that contails console.log statements -->
         <!--<script src="../dist/bugger.min.js"></script>-->
 
         <script src="../libs/ua-parser.js"></script>
@@ -11,9 +12,14 @@
 
 	<script>
         var bugger = new Bugger(true, 'http://localhost:8888/libs/Bugger.js/test/collect.php');
+        Bugger.LOG = true;
     </script>
 
-    <button onclick="boo();">Generate a runtime error</button>
+    <h1>Bugger.js testing page</h1>
+    <p>Open your console and press the button. An JavaScript exception is thrown an the error is passed on to Google Analytics and to collect.php</p>
+    <p>This example will only run on a server</p>
+
+    <button onclick="boo();">Generate a runtime error!</button>
 
     <script>
         var _gaq=[['_setAccount','UA-00000000-0'],['_trackPageview'],['_setDomainName', 'www.mydomain.com']];
@@ -21,12 +27,5 @@
             g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>
-
-
-    <script>
-       console.log( _gaq.push )
-    </script>
-
-
 </body>
 </html>
